# keeplog

./: .gitignore  LICENSE  README.md  install.sh  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  python-app.yml
docs/: commands.md  config.md  development.md  index.md  usage.md
docs/stylesheets/: extra.css
site/: 404.html  index.html  sitemap.xml
site/commands/: index.html
site/config/: index.html
site/development/: index.html
site/search/: search_index.json
site/usage/: index.html
src/keeplog/: __main__.py  capture.py  cli.py  config.py  db.py  install.py  search.py
src/keeplog/hooks/: bash.sh  fish.sh  zsh.sh
tests/: test_capture.py  test_config.py  test_db.py
