[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keeplog"
version = "0.1.0"
description = "Terminal session logger with full-text search"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
keeplog = "keeplog.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/keeplog"]
